fix(datepicker): arrow class rename

--- a/src/datepicker/datepicker-navigation.scss
+++ b/src/datepicker/datepicker-navigation.scss
@@ -10,15 +10,6 @@ ngb-datepicker-navigation {
     display: inline-block;
     width: 0.75em;
     height: 0.75em;
-    margin-left: 0.25em;
-    margin-right: 0.15em;
-    transform: rotate(-135deg);
-  }
-
-  .right-arrow &-navigation-chevron {
-    transform: rotate(45deg);
-    margin-left: 0.15em;
-    margin-right: 0.25em;
   }
 
   &-arrow {
@@ -30,10 +21,23 @@ ngb-datepicker-navigation {
     width: 2rem;
     height: 2rem;
 
-    &.right-arrow {
-      justify-content: flex-end;
+    &-prev {
+      .ngb-dp-navigation-chevron {
+        margin-left: 0.25em;
+        margin-right: 0.15em;
+        transform: rotate(-135deg);
+      }
     }
 
+    &-next {
+      justify-content: flex-end;
+
+      .ngb-dp-navigation-chevron {
+        margin-left: 0.15em;
+        margin-right: 0.25em;
+        transform: rotate(45deg);
+      }
+    }
   }
 
   &-arrow-btn {
